--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -415,7 +415,7 @@ article p a {
 }
 
 :root {
-  --ifm-font-family-base: "Manrope", "Inter";
+  --ifm-font-family-base: "Inter";
 }
 
 /* Header Dropdown Menu */
