refac: font update

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -7,6 +7,7 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap");
@@ -418,7 +419,7 @@ article p a {
 }
 
 :root {
-  --ifm-font-family-base: "Inter";
+  --ifm-font-family-base: "Archivo";
 }
 
 /* Header Dropdown Menu */
