--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,6 +34,13 @@
 	--ifm-global-shadow-md: 0px; /* Remove shadow on the left */
 }
 
+/** In mobile view, reduce the padding */
+@media screen and (max-width: 996px) {
+	:root {
+		--ifm-navbar-height: 100%;
+	}
+}
+
 [data-theme="light"] {
 	--ifm-menu-color: #000;
 }
